src/network_policies/test1default-fluidos-consumer-1eb36fa4b97320fd58d9726a98f4e84b9a1b13f9e30e5c61b79810bb6220cf1ec5cd05 Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test1default-fluidos-consumer-1eb36fa4b97320fd58d9726a98f4e84b9a1b13f9e30e5c61b79810bb6220cf1ec5cd05
  namespace: default-fluidos-consumer-1eb36f
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: product-catalogue
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring-fluidos-consumer-1eb36f
      podSelector: {}
    ports:
    - port: 80
      protocol: TCP
